Added secret the actions

--- a/.github/workflows/Test-Secret.yml
+++ b/.github/workflows/Test-Secret.yml
@@ -12,5 +12,7 @@ jobs:
         steps:
         - uses: actions/checkout@v2
         - name: hello world
-          run: echo "Hello World"
+          run: |
+            echo "The GitHub Action Secret will be masked:  "
+            echo ${{ secrets.TEST_SECRET }}    
           shell: bash
