Added actions GH Token

--- a/.github/workflows/Test-Secret.yml
+++ b/.github/workflows/Test-Secret.yml
@@ -14,5 +14,5 @@ jobs:
         - name: hello world
           run: |
             echo "The GitHub Action Secret will be masked:  "
-            echo ${{ secrets.TEST_SECRET }}    
+            echo ${{ secrets.GITHUB_TOKEN }}    
           shell: bash
