--- a/.github/workflows/Merge-to-Main.yml
+++ b/.github/workflows/Merge-to-Main.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - name: Check branches
         run: |
-          if [[ ! ${{ github.head_ref }} =~ ^rc/.* ] || [ ! ${{ github.head_ref }} =~ ^hfc/.* ]] && [ ${{ github.base_ref }} == "main" ]; then
+          if [[ ! ${{ github.head_ref }} =~ ^rc/.*  ||  ! ${{ github.head_ref }} =~ ^hfc/.*  &&  ${{ github.base_ref }} == "main" ]]; then
             echo "📣📢 Merge requests to main branch are only allowed from rc/** branches."
             exit 1
           else
