--- a/.github/workflows/Merge-to-Main.yml
+++ b/.github/workflows/Merge-to-Main.yml
@@ -1,7 +1,7 @@
 name: Check Source Branch
 on:
   workflow_dispatch:
-  pull_request_target:
+  pull_request:
     types:
       - opened
       - reopened
@@ -16,6 +16,8 @@ jobs:
             if [[ ${{ github.head_ref }} =~ ^rc/.*  ||  ${{ github.head_ref }} =~ ^hfc/.* ]]; then
               echo "🚀📣 Ready to merge"
             else
+              $body = ">⚠️ Friendly reminder: ⚠️📢 Merge requests to main branch are only allowed from rc/** or hfc/** branches."
+              gh pr comment ${{ github.event.pull_request.number }} --repo ${{ github.repository }} --body $body }
               echo "⚠️📢 Merge requests to main branch are only allowed from rc/** or hfc/** branches."
               exit 1
             fi
