--- a/.github/workflows/Merge-to-Main.yml
+++ b/.github/workflows/Merge-to-Main.yml
@@ -18,7 +18,7 @@ jobs:
             else
             { 
               $body = ">⚠️ Friendly reminder: ⚠️📢 Merge requests to main branch are only allowed from rc/** or hfc/** branches."
-              gh pr comment ${{ github.event.pull_request.number }} --repo ${{ github.repository }} --body $body }
+              gh pr comment ${{ github.event.pull_request.number }} --repo ${{ github.repository }} --body "$body"
               echo "⚠️📢 Merge requests to main branch are only allowed from rc/** or hfc/** branches."
               exit 1
             }
