--- a/.github/workflows/Merge-to-Main.yml
+++ b/.github/workflows/Merge-to-Main.yml
@@ -17,6 +17,7 @@ jobs:
               echo "🚀📣 Ready to merge"
             else
                 body="⚠️ Friendly reminder: ⚠️📢 Merge requests to main branch are only allowed from rc/** or hfc/** branches."
+                gh pr comment ${{ github.event.pull_request.number }} --repo ${{ github.repository }} --body "$body"
                 echo "$body"
                 exit 1;
             fi
