--- a/.github/workflows/Merge-to-Main.yml
+++ b/.github/workflows/Merge-to-Main.yml
@@ -7,8 +7,8 @@ on:
       - reopened
       - synchronize
 
-env:
-    GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+permissions:
+  pull-requests: write
 
 jobs:
   Check_HEAD_Branch:
