--- a/.github/workflows/Merge-to-Main.yml
+++ b/.github/workflows/Merge-to-Main.yml
@@ -10,6 +10,10 @@ jobs:
   Check_HEAD_Branch:
     runs-on: ubuntu-latest
     steps:
+      - name: get-team-members
+        id: get-members
+        shell: bash
+        run: echo ::set-output name=data::$(gh repo list)
       - name: 📢 Verify BASE and HEAD branches
         run: |
           if [[  ${{ github.base_ref }} == "main" ]]; then
