--- a/.github/workflows/Merge-to-Main.yml
+++ b/.github/workflows/Merge-to-Main.yml
@@ -15,8 +15,7 @@ jobs:
         id: get-members
         shell: bash
         run: |
-          echo ${{ secrets.GITHUB_TOKEN }} | gh auth login --with-token
-          gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /orgs/cmnhospitals/teams
+          curl -L -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }} " -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/orgs/cmnhospitals/teams
 
       - name: 📢 Verify BASE and HEAD branches
         run: |
