--- a/.github/workflows/Merge-to-Main.yml
+++ b/.github/workflows/Merge-to-Main.yml
@@ -16,12 +16,12 @@ jobs:
         shell: pwsh
         run: |
           if ( "${{ github.base_ref }}" -eq "main") {
-            if ( ${{ github.head_ref }} -match "^rc/.*" -or ${{ github.head_ref }} -match "^hfc/.*") {
+            if ( "${{ github.head_ref }}" -match "^rc/.*" -or "${{ github.head_ref }}" -match "^hfc/.*") {
               gh pr merge ${{ github.event.pull_request.number }} --auto
               Write-Host "🚀📣 Ready to merge"
             }
             ##### psudo code for allowing devops/* branches to merge directly into main, but only if the author of the PR is on the DevOps team
-            elseif ( ${{ github.head_ref }} -match "^devops/.*") {
+            elseif ( "${{ github.head_ref }}" -match "^devops/.*") {
               $prAuthor = (gh pr view ${{ github.event.pull_request.number }} --repo ${{ github.repository }} --json author | ConvertFrom-Json).author.login
               if ((gh api -X GET /orgs/cmnhospitals/teams/devops/memberships/$prAuthor | ConvertFrom-Json).state -eq "active") {
                 Write-Host "🤖🚀📣 Please continue Lord Commander!"
