--- a/.github/workflows/Merge-to-Main.yml
+++ b/.github/workflows/Merge-to-Main.yml
@@ -12,13 +12,7 @@ jobs:
     steps:
       - name: get-team-members
         id: get-members
-        shell: bash
+        shell: pwsh
         run: echo ::set-output name=data::$(gh repo list)
       - name: 📢 Verify BASE and HEAD branches
-        run: |
-          if [[  ${{ github.base_ref }} == "main" ]]; then
-            if [[ ${{ github.head_ref }} =~ ^rc/.*  ||  ${{ github.head_ref }} =~ ^hfc/.* ]]; then
-              echo "🚀📣 Ready to merge"
-            else { body = ">⚠️ Friendly reminder: ⚠️📢 Merge requests to main branch are only allowed from rc/** or hfc/** branches."; echo "$(body)"; exit 1; }
-            fi
-          fi
+        run: Write-Host "{{ github.event.pull_request.user.login }}"
