--- a/.github/workflows/Merge-to-Main.yml
+++ b/.github/workflows/Merge-to-Main.yml
@@ -6,19 +6,15 @@ on:
       - opened
       - reopened
       - synchronize
+
+env:
+  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
   Check_HEAD_Branch:
     runs-on: ubuntu-latest
     steps:
-      - name: get-team-members
-        id: get-members
-        shell: bash
-        run: echo ::set-output name=data::$(gh repo list)
       - name: 📢 Verify BASE and HEAD branches
+        shell: pwsh
         run: |
-          if [[  ${{ github.base_ref }} == "main" ]]; then
-            if [[ ${{ github.head_ref }} =~ ^rc/.*  ||  ${{ github.head_ref }} =~ ^hfc/.* ]]; then
-              echo "🚀📣 Ready to merge"
-            else { body = ">⚠️ Friendly reminder: ⚠️📢 Merge requests to main branch are only allowed from rc/** or hfc/** branches."; echo "$(body)"; exit 1; }
-            fi
-          fi
+          Write-Host "github.event.pull_request.user.login"
