--- a/.github/workflows/Merge-to-Main.yml
+++ b/.github/workflows/Merge-to-Main.yml
@@ -17,4 +17,4 @@ jobs:
       - name: 📢 Verify BASE and HEAD branches
         shell: pwsh
         run: |
-          Write-Host "github.event.pull_request.user.login
+          Write-Host "{{ github.event.pull_request.user.login }}"
